<resources>
    <string name="app_name">COVID19 Tracker</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in_successful">Login was successful</string>
    <string name="action_sign_in_unsuccessful">Login Failed</string>
    <string name="action_register_successful">Account registraion Successful</string>
    <string name="action_register_unsuccessful">Account creation failed</string>
    <string name="action_new_location">New Location</string>
    <string name="action_location_saved">New location was saved!</string>
    <string name="action_my_location">My Locations</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_api_url">API Url</string>
    <string name="action_save_settings">Save</string>
    <string name="action_successful">Changes Saved</string>
    <string name="action_logout_successful">You have been successfully Signed out</string>
    <string name="action_logout">Sign out</string>
    <string name="nfc_unavailable">Warning: NFC is not available on this device</string>
    <string name="nfc_tag_not_supported">This NFC Tag is not supported</string>
    <string name="wait_for_nfc_card">Please scan tag when ready</string>
    <string name="action_already_logged_out">You are already logged out</string>
    <string name="nfc_tag_supported">Valid tag detected</string>
    <string name="nfc_tag">Tag detected</string>
    <string name="tag_unknown">Unknown Tag Discovered</string>
    <string name="action_request_failed">We failed to process your request</string>
</resources>