<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/nameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_textView_margin"
        android:layout_marginTop="@dimen/activity_textView_margin" />

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_textView_margin"
        android:layout_marginTop="@dimen/activity_textView_margin" />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_textView_margin"
        android:layout_marginTop="@dimen/activity_textView_margin" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_logout" />

    <EditText
        android:id="@+id/apiUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_textView_margin"
        android:layout_marginTop="@dimen/activity_textView_margin"
        android:inputType="textUri"
        android:hint="@string/action_api_url" />

    <Button
        android:id="@+id/btn_save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save_settings" />
</LinearLayout>